<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8c00"
    android:padding="4dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="207dp"
        android:layout_margin="4dp"
        android:background="#ffffff"
        android:gravity="bottom|end"
        android:maxLength="17"
        android:maxLines="2"
        android:nestedScrollingEnabled="false"
        android:text="@string/_0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="70sp" />



    <Button
        android:id="@+id/btn7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:background="#4d4d4d"
        android:maxWidth="90dp"
        android:onClick="onClickNumber"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/btn7"
        android:background="#4d4d4d"
        android:maxWidth="90dp"
        android:onClick="onClickNumber"
        android:text="@string/_8"
        android:textColor="#ffffff"
        android:textSize="30sp" />


    <Button
        android:id="@+id/btn9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/btn8"
        android:background="#4d4d4d"
        android:maxWidth="90dp"
        android:onClick="onClickNumber"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn7"
        android:layout_toStartOf="@+id/btn5"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn8"
        android:layout_toEndOf="@+id/btn7"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn5"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_6"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn4"
        android:layout_toStartOf="@+id/btn5"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_1"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_2"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn6"
        android:layout_toEndOf="@+id/btn5"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:background="#4d4d4d"
        android:onClick="onClickClear"
        android:text="@string/c"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn2"
        android:layout_toEndOf="@+id/btn1"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn3"
        android:layout_toEndOf="@+id/btn0"
        android:background="#4d4d4d"
        android:onClick="onClickEqual"
        android:text="@string/equalTo"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/btn9"
        android:background="#4d4d4d"
        android:maxWidth="90dp"
        android:onClick="onClickOperator"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/btnPlus"
        android:layout_toEndOf="@+id/btn9"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:text="@string/minus"
        android:textColor="#ffffff"
        android:textSize="30sp" />


    <Button
        android:id="@+id/btnMult"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/btnMinus"
        android:layout_toEndOf="@+id/btn9"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:text="@string/x"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnMult"
        android:layout_toEndOf="@+id/btn9"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:text="@string/div"
        android:textColor="#ffffff"
        android:textSize="30sp" />


</RelativeLayout>